--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -45,7 +45,8 @@ jobs:
       DD_TEST_AGENT_URL: http://testagent:9126
       AEROSPIKE_HOST_ADDRESS: aerospike
     steps:
-      - uses: actions/checkout@v4
+      # Needs to remain on v3 for now due to GLIBC version
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
@@ -991,7 +992,8 @@ jobs:
       SERVICES: oracledb
       DD_TEST_AGENT_URL: http://testagent:9126
     steps:
-      - uses: actions/checkout@v4
+      # Needs to remain on v3 for now due to GLIBC version
+      - uses: actions/checkout@v3
       - uses: ./.github/actions/node/setup
       - run: yarn install --ignore-engines
       - run: yarn services
