--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -1004,8 +1004,9 @@ jobs:
           cache: yarn
           node-version: '16'
       - run: yarn install --ignore-engines
-      - run: yarn services
-      - run: yarn test:plugins
+      - run: yarn config set ignore-engines true
+      - run: yarn services --ignore-engines
+      - run: yarn test:plugins --ignore-engines
       - uses: codecov/codecov-action@v3
 
   paperplane:
