--- a/.github/workflows/appsec.yml
+++ b/.github/workflows/appsec.yml
@@ -191,7 +191,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/node/setup
       - run: yarn install
-      - uses: ./.github/actions/node/oldest
+      - uses: ./.github/actions/node/18
       - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/20
       - run: yarn test:appsec:plugins:ci
