--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           content=`cat ./package.json | tr '\n' ' '`
           echo "json=$content" >> $GITHUB_OUTPUT
-          version="${{fromJson(steps.pkg.outputs.json).version}}"
+          version="${{fromJson(env.GITHUB_OUTPUT.json).version}}"
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
@@ -91,7 +91,7 @@ jobs:
         run: |
           content=`cat ./package.json | tr '\n' ' '`
           echo "json=$content" >> $GITHUB_OUTPUT
-          version="${{fromJson(steps.pkg.outputs.json).version}}"
+          version="${{fromJson(env.GITHUB_OUTPUT.json).version}}"
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
@@ -131,7 +131,7 @@ jobs:
         run: |
           content=`cat ./package.json | tr '\n' ' '`
           echo "json=$content" >> $GITHUB_OUTPUT
-          version="${{fromJson(steps.pkg.outputs.json).version}}"
+          version="${{fromJson(env.GITHUB_OUTPUT.json).version}}"
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
