--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -89,13 +89,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
-      - id: pkg
+      - id: extract_pkg
         run: |
-          content=`cat ./package.json | tr '\n' ' '`
-          echo "json=$content" >> $GITHUB_OUTPUT
-      - id: extract
-        run: |
-          version="${{fromJson(steps.pkg.outputs.json).version}}"
+          echo "PACKAGE_JSON=$(jq -c < package.json)" >> $GITHUB_ENV
+          version="${{fromJson(env.PACKAGE_JSON).version}}"
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
@@ -133,10 +130,8 @@ jobs:
       - uses: ./.github/actions/node/setup
       - id: extract_pkg
         run: |
-          content=`cat ./package.json | tr '\n' ' '`
-          echo "json=$content" >> $GITHUB_OUTPUT
-        run: |
-          version="${{fromJson(steps.extract_pkg.outputs.json).version}}"
+          echo "PACKAGE_JSON=$(jq -c < package.json)" >> $GITHUB_ENV
+          version="${{fromJson(env.PACKAGE_JSON).version}}"
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
