--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -56,7 +56,8 @@ jobs:
           echo "json=$content" >> $GITHUB_OUTPUT
       - id: extract
         run: |
-          version="${{fromJson(steps.pkg.outputs.json).version}}"
+          content=$(cat ./package.json | tr '\n' ' ')
+          version=$(echo "$content" | jq -r .version)
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
@@ -91,9 +92,8 @@ jobs:
       - uses: ./.github/actions/node/setup
       - id: extract_pkg
         run: |
-          content=`cat ./package.json | tr '\n' ' '`
-          echo "json=$content" >> $GITHUB_OUTPUT
-          version="${{fromJson(env.GITHUB_OUTPUT).version}}"
+          content=$(cat ./package.json | tr '\n' ' ')
+          version=$(echo "$content" | jq -r .version)
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
