--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -90,7 +90,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
-      - id: extract_pkg
+      - name: Extract tracer version
         run: |
           content=$(cat ./package.json | tr '\n' ' ')
           version=$(echo "$content" | jq -r .version)
@@ -129,7 +129,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
-      - id: extract_pkg
+      - name: Extract tracer version
         run: |
           content=$(cat ./package.json | tr '\n' ' ')
           version=$(echo "$content" | jq -r .version)
