--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -50,12 +50,13 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
-      # jq -r is not available on v3
-      - name: Extract tracer version
+      - id: pkg
         run: |
           content=`cat ./package.json | tr '\n' ' '`
-          echo "JSON_OUTPUT=$content" >> $GITHUB_ENV
-          version="${{fromJson(env.JSON_OUTPUT).version}}"
+          echo "json=$content" >> $GITHUB_OUTPUT
+      - id: extract
+        run: |
+          version="${{fromJson(steps.pkg.outputs.json).version}}"
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
@@ -88,10 +89,13 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
-      - name: Extract tracer version
+      - id: pkg
         run: |
-          content=$(cat ./package.json | tr '\n' ' ')
-          version=$(echo "$content" | jq -r .version)
+          content=`cat ./package.json | tr '\n' ' '`
+          echo "json=$content" >> $GITHUB_OUTPUT
+      - id: extract
+        run: |
+          version="${{fromJson(steps.pkg.outputs.json).version}}"
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
@@ -127,10 +131,13 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
-      - name: Extract tracer version
+      - id: pkg
         run: |
-          content=$(cat ./package.json | tr '\n' ' ')
-          version=$(echo "$content" | jq -r .version)
+          content=`cat ./package.json | tr '\n' ' '`
+          echo "json=$content" >> $GITHUB_OUTPUT
+      - id: extract
+        run: |
+          version="${{fromJson(steps.pkg.outputs.json).version}}"
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
