--- a/.github/workflows/appsec.yml
+++ b/.github/workflows/appsec.yml
@@ -27,9 +27,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/node/setup
       - run: yarn install
-      - uses: ./.github/actions/node/16
+      - uses: ./.github/actions/node/oldest
       - run: yarn test:appsec:ci
-      - uses: ./.github/actions/node/18
+      - uses: ./.github/actions/node/20
       - run: yarn test:appsec:ci
       - uses: ./.github/actions/node/latest
       - run: yarn test:appsec:ci
@@ -88,8 +88,6 @@ jobs:
       - run: yarn install
       - uses: ./.github/actions/node/oldest
       - run: yarn test:appsec:plugins:ci
-      - uses: ./.github/actions/node/16
-      - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/18
       - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/20
@@ -113,8 +111,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/node/setup
       - run: yarn install
-      - uses: ./.github/actions/node/16
-      - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/18
       - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/20
@@ -197,8 +193,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/node/setup
       - run: yarn install
-      - uses: ./.github/actions/node/16
-      - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/18
       - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/20
@@ -226,8 +220,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install
-      - run: yarn test:appsec:plugins:ci
+      - run: yarn install --ignore-engines
+      - run: yarn config set ignore-engines true
+      - run: yarn test:appsec:plugins:ci --ignore-engines
       - if: always()
         uses: ./.github/actions/testagent/logs
       - uses: codecov/codecov-action@v3
