Add more versions to child process plugin.

--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -192,6 +192,12 @@ jobs:
       - run: yarn install
       - uses: ./.github/actions/node/oldest
       - run: yarn test:plugins:ci
+      - uses: ./.github/actions/node/16
+      - run: yarn test:plugins:ci
+      - uses: ./.github/actions/node/18
+      - run: yarn test:plugins:ci
+      - uses: ./.github/actions/node/20
+      - run: yarn test:plugins:ci
       - uses: ./.github/actions/node/latest
       - run: yarn test:plugins:ci
       - uses: codecov/codecov-action@v2
